<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivities.EditUserDataActivities.EditUserDataActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="165dp"
        android:text="Imię:"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editUserNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="155dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="Twoje imię"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.322"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Nazwisko:"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editUserLastNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="Twoje nazwisko"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editUserNameTextView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editUserNameTextView"
        app:layout_constraintTop_toBottomOf="@+id/editUserNameTextView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="Uczelnia:"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editUserUniversityTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="Twoja uczelnia"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editUserLastNameTextView"
        app:layout_constraintStart_toStartOf="@+id/editUserLastNameTextView"
        app:layout_constraintTop_toBottomOf="@+id/editUserLastNameTextView" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="Urodziny:"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/editUserBirthdayDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="Twoja data urodzin"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="@+id/editUserUniversityTextView"
        app:layout_constraintStart_toStartOf="@+id/editUserUniversityTextView"
        app:layout_constraintTop_toBottomOf="@+id/editUserUniversityTextView" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Hobby:"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/editUserPassionsTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="Twoje pasje"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editUserBirthdayDateTextView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editUserBirthdayDateTextView"
        app:layout_constraintTop_toBottomOf="@+id/editUserBirthdayDateTextView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/saveUserDataButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="20dp"
        android:text="Zapisz"
        app:layout_constraintBottom_toTopOf="@+id/editUserNameTextView"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>