<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/included_toolbar"
        android:layout_height="match_parent"
        android:background="#F7F7F7">

        <include
            android:id="@+id/included_toolbar"
            layout="@layout/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/save_note_linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/included_toolbar"
            android:layout_marginTop="20dp"
            android:divider="@drawable/empty_thick_divider"
            android:gravity="center"
            android:orientation="horizontal"
            android:showDividers="middle">

            <Spinner
                android:id="@+id/AddNewNoteMonthSpinner"
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:layout_marginStart="44dp"
                android:spinnerMode="dropdown"
                android:background="@drawable/button_shape_1"/>

            <Spinner
                android:id="@+id/AddNewNoteDaySpinner"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_marginEnd="44dp"
                android:spinnerMode="dropdown"
                android:background="@drawable/button_shape_1"/>
        </LinearLayout>

        <EditText
            android:id="@+id/saveNoteNoteTextView"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_above="@+id/saveNoteSaveButton"
            android:layout_below="@+id/save_note_linear_layout"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/relative_layout_border_1"
            android:gravity="top|left"
            android:hint="Twoja notatka"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            app:layout_constraintHorizontal_bias="0.492" />

        <Button
            android:id="@+id/saveNoteSaveButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_shape_1"
            android:text="Zapisz"
            android:textAllCaps="false"
            android:textSize="17sp"
            android:typeface="sans" />


    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>